[gd_scene load_steps=3 format=3 uid="uid://bdhkg5bb08t82"]

[ext_resource type="Script" uid="uid://bi8va16xtsxxm" path="res://quests/widgets/QuestPanel.gd" id="1_h6wrl"]
[ext_resource type="PackedScene" uid="uid://e2fkhon8pqp2" path="res://quests/widgets/QuestStep.tscn" id="1_wurjl"]

[node name="QuestPanel" type="Panel"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_h6wrl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "1 quest"

[node name="QuestNameLabel" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "Quest name"
fit_content = true

[node name="QuestDescriptionLabel" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/normal_font_size = 10
text = "Quest description"
fit_content = true

[node name="QuestStep" parent="VBoxContainer" instance=ExtResource("1_wurjl")]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
step_name = "sdf sdfdsf"
